cbits/Bullet.h

void* bT_BOX_BOX_TRANSFORM_CACHE_new(); //constructor: BT_BOX_BOX_TRANSFORM_CACHE  ( ::BT_BOX_BOX_TRANSFORM_CACHE::* )(  ) 
void bT_BOX_BOX_TRANSFORM_CACHE_free(void *c);
 
void bT_BOX_BOX_TRANSFORM_CACHE_calc_from_full_invert(void *c,float* p0,float* p1); //method: calc_from_full_invert void ( ::BT_BOX_BOX_TRANSFORM_CACHE::* )( ::btTransform const &,::btTransform const & ) 
void bT_BOX_BOX_TRANSFORM_CACHE_calc_from_homogenic(void *c,float* p0,float* p1); //method: calc_from_homogenic void ( ::BT_BOX_BOX_TRANSFORM_CACHE::* )( ::btTransform const &,::btTransform const & ) 
void bT_BOX_BOX_TRANSFORM_CACHE_transform(void *c,float* p0,float* ret); //method: transform ::btVector3 ( ::BT_BOX_BOX_TRANSFORM_CACHE::* )( ::btVector3 const & ) const
void bT_BOX_BOX_TRANSFORM_CACHE_calc_absolute_matrix(void *c); //method: calc_absolute_matrix void ( ::BT_BOX_BOX_TRANSFORM_CACHE::* )(  ) 
void bT_BOX_BOX_TRANSFORM_CACHE_m_T1to0_set(void *c,float* a); //attribute: ::btVector3 bT_BOX_BOX_TRANSFORM_CACHE->m_T1to0
void bT_BOX_BOX_TRANSFORM_CACHE_m_T1to0_get(void *c,float* a);
void bT_BOX_BOX_TRANSFORM_CACHE_m_R1to0_set(void *c,float* a); //attribute: ::btMatrix3x3 bT_BOX_BOX_TRANSFORM_CACHE->m_R1to0
void bT_BOX_BOX_TRANSFORM_CACHE_m_R1to0_get(void *c,float* a);
void bT_BOX_BOX_TRANSFORM_CACHE_m_AR_set(void *c,float* a); //attribute: ::btMatrix3x3 bT_BOX_BOX_TRANSFORM_CACHE->m_AR
void bT_BOX_BOX_TRANSFORM_CACHE_m_AR_get(void *c,float* a);
void* bT_QUANTIZED_BVH_NODE_new(); //constructor: BT_QUANTIZED_BVH_NODE  ( ::BT_QUANTIZED_BVH_NODE::* )(  ) 
void bT_QUANTIZED_BVH_NODE_free(void *c);
 
int bT_QUANTIZED_BVH_NODE_getEscapeIndex(void *c); //method: getEscapeIndex int ( ::BT_QUANTIZED_BVH_NODE::* )(  ) const
int bT_QUANTIZED_BVH_NODE_getDataIndex(void *c); //method: getDataIndex int ( ::BT_QUANTIZED_BVH_NODE::* )(  ) const
void bT_QUANTIZED_BVH_NODE_setEscapeIndex(void *c,int p0); //method: setEscapeIndex void ( ::BT_QUANTIZED_BVH_NODE::* )( int ) 
void bT_QUANTIZED_BVH_NODE_setDataIndex(void *c,int p0); //method: setDataIndex void ( ::BT_QUANTIZED_BVH_NODE::* )( int ) 
int bT_QUANTIZED_BVH_NODE_isLeafNode(void *c); //method: isLeafNode bool ( ::BT_QUANTIZED_BVH_NODE::* )(  ) const
//not supported method: testQuantizedBoxOverlapp bool ( ::BT_QUANTIZED_BVH_NODE::* )( short unsigned int *,short unsigned int * ) const
// error:  - unsupported,  - unsupported, bool - ok

void bT_QUANTIZED_BVH_NODE_m_escapeIndexOrDataIndex_set(void *c,int a); //attribute: int bT_QUANTIZED_BVH_NODE->m_escapeIndexOrDataIndex
int bT_QUANTIZED_BVH_NODE_m_escapeIndexOrDataIndex_get(void *c); //attribute: int bT_QUANTIZED_BVH_NODE->m_escapeIndexOrDataIndex
// attribute not supported: //attribute: short unsigned int[3] bT_QUANTIZED_BVH_NODE->m_quantizedAabbMax
// attribute not supported: //attribute: short unsigned int[3] bT_QUANTIZED_BVH_NODE->m_quantizedAabbMin
void* btGImpactCompoundShape_CompoundPrimitiveManager_new0(void* p0); //constructor: CompoundPrimitiveManager  ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )( ::btGImpactCompoundShape * ) 
void* btGImpactCompoundShape_CompoundPrimitiveManager_new1(); //constructor: CompoundPrimitiveManager  ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )(  ) 
void btGImpactCompoundShape_CompoundPrimitiveManager_free(void *c);
 
int btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_count(void *c); //method: get_primitive_count int ( ::btGImpactCompoundShape::CompoundPrimitiveManager::* )(  ) const