Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{-#LANGUAGE ForeignFunctionInterface#-}
#include "Bullet.h"
module Physics.Bullet.Raw.BulletCollision.Gimpact (
module Physics.Bullet.Raw.BulletCollision.Gimpact
) where
import Control.Monad
import Foreign.Marshal.Alloc
import Foreign.ForeignPtr.Unsafe
import Foreign.Ptr
import Physics.Bullet.Raw.C2HS
import Physics.Bullet.Raw.Types
import Physics.Bullet.Raw.Class
-- * BT_BOX_BOX_TRANSFORM_CACHE
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#187>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_new as bT_BOX_BOX_TRANSFORM_CACHE    {  } -> `BT_BOX_BOX_TRANSFORM_CACHE' mkBT_BOX_BOX_TRANSFORM_CACHE* #}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_free    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#208>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_calc_from_full_invert as bT_BOX_BOX_TRANSFORM_CACHE_calc_from_full_invert    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans0
, withTransform* `Transform'  peekTransform* -- ^ trans1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#208>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_calc_from_full_invert as bT_BOX_BOX_TRANSFORM_CACHE_calc_from_full_invert'    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans0
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#194>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_calc_from_homogenic as bT_BOX_BOX_TRANSFORM_CACHE_calc_from_homogenic    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans0
, withTransform* `Transform'  peekTransform* -- ^ trans1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#194>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_calc_from_homogenic as bT_BOX_BOX_TRANSFORM_CACHE_calc_from_homogenic'    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans0
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#219>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_transform as bT_BOX_BOX_TRANSFORM_CACHE_transform    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ point
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#219>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_transform as bT_BOX_BOX_TRANSFORM_CACHE_transform'    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ point
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#168>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_calc_absolute_matrix as bT_BOX_BOX_TRANSFORM_CACHE_calc_absolute_matrix    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#164>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_T1to0_set    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , withVec3* `Vec3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#164>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_T1to0_get    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , allocaVec3-  `Vec3'  peekVec3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#165>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_R1to0_set    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , withMat3* `Mat3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#165>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_R1to0_get    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , allocaMat3-  `Mat3'  peekMat3* } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#166>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_AR_set    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , withMat3* `Mat3'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.h?r=2223#166>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btBoxCollision.cpp?r=2223>
-}
{#fun bT_BOX_BOX_TRANSFORM_CACHE_m_AR_get    `( BT_BOX_BOX_TRANSFORM_CACHEClass bc )' =>     { withBt* `bc' , allocaMat3-  `Mat3'  peekMat3* } -> `()' #}
-- * BT_QUANTIZED_BVH_NODE
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#44>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_new as bT_QUANTIZED_BVH_NODE    {  } -> `BT_QUANTIZED_BVH_NODE' mkBT_QUANTIZED_BVH_NODE* #}
{#fun bT_QUANTIZED_BVH_NODE_free    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#55>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_getEscapeIndex as bT_QUANTIZED_BVH_NODE_getEscapeIndex    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#66>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_getDataIndex as bT_QUANTIZED_BVH_NODE_getDataIndex    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#61>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_setEscapeIndex as bT_QUANTIZED_BVH_NODE_setEscapeIndex    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#73>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_setDataIndex as bT_QUANTIZED_BVH_NODE_setDataIndex    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#49>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_isLeafNode as bT_QUANTIZED_BVH_NODE_isLeafNode    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_m_escapeIndexOrDataIndex_set    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.h?r=2223#42>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactQuantizedBvh.cpp?r=2223>
-}
{#fun bT_QUANTIZED_BVH_NODE_m_escapeIndexOrDataIndex_get    `( BT_QUANTIZED_BVH_NODEClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * CompoundPrimitiveManager
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#317>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_new0 as btGImpactCompoundShape_CompoundPrimitiveManager0    `( BtGImpactCompoundShapeClass p0 )' =>     {  withBt* `p0'  } -> `BtGImpactCompoundShape_CompoundPrimitiveManager' mkBtGImpactCompoundShape_CompoundPrimitiveManager* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#322>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_new1 as btGImpactCompoundShape_CompoundPrimitiveManager1    {  } -> `BtGImpactCompoundShape_CompoundPrimitiveManager' mkBtGImpactCompoundShape_CompoundPrimitiveManager* #}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_free    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#332>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
{#fun btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_count as btGImpactCompoundShape_CompoundPrimitiveManager_get_primitive_count    `( BtGImpactCompoundShape_CompoundPrimitiveManagerClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.h?r=2223#352>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactShape.cpp?r=2223>
-}
